2025-12-30T01:20:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20586488474 # 854
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-30
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 1258 2020 / 1265 2027
* notice: next accum: outdated-unq outdated-all / unq all: 1259 2021 / 1266 2028
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-15] / [2025-12-29]

2025-12-29T01:26:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20562501132 # 853
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-29
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 1256 2018 / 1263 2025
* notice: next accum: outdated-unq outdated-all / unq all: 1258 2020 / 1265 2027
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-12-14] / [2025-12-28]

2025-12-27T01:18:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20532367928 # 851
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-27
* notice: last 14d: unq all: 7 7
* notice: prev accum: outdated-unq outdated-all / unq all: 1255 2017 / 1263 2025
* notice: next accum: outdated-unq outdated-all / unq all: 1256 2018 / 1263 2025
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-12] / []

2025-12-26T01:20:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20513668118 # 850