@@ -1,3 +1,12 @@
+2025-12-31T01:21:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20609681495 # 855
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
+* notice: last 14d: unq all: 6 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 1259 2021 / 1266 2028
+* notice: next accum: outdated-unq outdated-all / unq all: 1259 2021 / 1266 2028
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2025-12-30T01:20:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20586488474 # 854
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-30
